--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,7 +32,8 @@
             android:textSize="18sp"
             android:layout_centerInParent="true"/>
 
-        <ImageView
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/userProfilePic"
             android:layout_width="35dp"
             android:layout_height="35dp"
             android:layout_marginStart="20dp"
