--- a/app/src/main/res/layout/messages_adapter_layout.xml
+++ b/app/src/main/res/layout/messages_adapter_layout.xml
@@ -12,7 +12,8 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
-            <ImageView
+
+            <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/profilePic"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
@@ -32,6 +33,7 @@
                 android:layout_toEndOf="@id/profilePic">
 
                 <TextView
+                    android:id="@+id/name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:maxLines="1"
