--- a/app/src/main/res/layout/messages_adapter_layout.xml
+++ b/app/src/main/res/layout/messages_adapter_layout.xml
@@ -69,6 +69,13 @@
 
         </RelativeLayout>
 
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
+            android:background="#14000000"/>
+
     </LinearLayout>
 
 </RelativeLayout>
