--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -16,9 +16,10 @@ tools:context=".Register">
         android:gravity="center"
         android:textSize="20sp"
         android:textStyle="bold"
-        android:text="Register Here"/>
+        android:text="@string/welcome_txt"/>
 
     <EditText
+        android:textColor="@color/txt_color"
         android:id="@+id/r_name"
         android:layout_marginTop="40dp"
         android:layout_width="match_parent"
@@ -26,7 +27,7 @@ tools:context=".Register">
         android:layout_marginEnd="20dp"
         android:background="@drawable/round_back_white_10"
         android:layout_height="50dp"
-        android:hint="Name"
+        android:hint="@string/name_txt"
         android:inputType="text"
         android:maxLines="1"
         android:paddingStart="20dp"
@@ -34,6 +35,7 @@ tools:context=".Register">
         android:textSize="16sp"/>
 
     <EditText
+        android:textColor="@color/txt_color"
         android:id="@+id/r_mobile"
         android:layout_marginTop="20dp"
         android:layout_width="match_parent"
@@ -41,7 +43,7 @@ tools:context=".Register">
         android:layout_marginEnd="20dp"
         android:background="@drawable/round_back_white_10"
         android:layout_height="50dp"
-        android:hint="Mobile Number"
+        android:hint="@string/number_txt"
         android:inputType="number"
         android:maxLines="1"
         android:paddingStart="20dp"
@@ -49,6 +51,7 @@ tools:context=".Register">
         android:textSize="16sp"/>
 
     <EditText
+        android:textColor="@color/txt_color"
         android:id="@+id/r_email"
         android:layout_marginTop="20dp"
         android:layout_width="match_parent"
@@ -56,7 +59,7 @@ tools:context=".Register">
         android:layout_marginEnd="20dp"
         android:background="@drawable/round_back_white_10"
         android:layout_height="50dp"
-        android:hint="Email Address"
+        android:hint="@string/email_txt"
         android:inputType="text"
         android:maxLines="1"
         android:paddingStart="20dp"
