added floating action buttons, opens contacts and retrieves their name. I generate random mobile numbers for now. Tapping the user profile icon display the saved contact name and generated number

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -43,7 +43,7 @@
             android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"
             android:src="@drawable/user_icon"
-            android:background=""/>
+            android:background="@color/tb_color"/>
     </RelativeLayout>
 
 
@@ -65,8 +65,6 @@
             android:layout_marginBottom="25dp"
             android:layout_marginEnd="25dp"
             app:srcCompat="@android:drawable/ic_input_add" />
-
-
     </RelativeLayout>
 
 </LinearLayout>
