--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -73,7 +73,7 @@ tools:context=".Register">
         android:layout_marginTop="40dp"
         android:layout_marginEnd="20dp"
         android:layout_marginStart="20dp"
-        android:text="Register Now"
+        android:text="@string/register_txt"
         android:textColor="@color/black"
         android:textStyle="bold"
         android:background="@drawable/round_back_theme_1000"/>
