--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,10 +8,31 @@
     android:background="@color/tb_color"
     tools:context=".MainActivity">
 
+    <Toolbar
+        android:id="@+id/my_toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="@color/bg_color"
+        android:elevation="4dp"
+        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
+
+        <TextView
+            android:textColor="@color/txt_color"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:textAllCaps="true"
+            android:gravity="left"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            android:text="Bim Chat"/>
+    </Toolbar>
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:background="@color/theme_color_80">
 
         <ImageView
             android:layout_width="35dp"
@@ -20,7 +41,7 @@
             android:layout_marginTop="40dp"
             android:layout_centerVertical="true"
             android:src="@drawable/search_icon"
-            android:background="@color/tb_color"
+            android:background="@color/theme_color_80"
             android:padding="6dp"/>
 
 
@@ -43,7 +64,7 @@
             android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"
             android:src="@drawable/user_icon"
-            android:background="@color/tb_color"/>
+            android:background="@color/theme_color_80"/>
     </RelativeLayout>
 
 
@@ -52,9 +73,9 @@
         android:layout_height="match_parent">
 
         <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/messagesRecyclerView"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/messagesRecyclerView"/>
+            android:layout_height="match_parent" />
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/fab"
@@ -62,8 +83,8 @@
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
             android:layout_alignParentBottom="true"
-            android:layout_marginBottom="25dp"
             android:layout_marginEnd="25dp"
+            android:layout_marginBottom="25dp"
             app:srcCompat="@android:drawable/ic_input_add" />
     </RelativeLayout>
 
