--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -14,13 +14,14 @@
             android:id="@+id/back_btn"
             android:layout_width="35dp"
             android:layout_height="35dp"
+            android:src="@drawable/ic_baseline_arrow_back_24"
             android:background="@color/tb_color"
             android:paddingStart="12sp"
             android:paddingEnd="24dp"
             android:layout_centerVertical="true"
             android:layout_marginStart="20dp"
             android:layout_marginTop="40dp"
-            app:srcCompat="@android:drawable/ic_menu_revert" />
+            />
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/profilePic"
@@ -30,7 +31,7 @@
             android:layout_marginStart="20dp"
             android:layout_marginTop="40dp"
             android:layout_toEndOf="@id/back_btn"
-            app:srcCompat="@drawable/user_icon"
+            android:src="@drawable/user_icon"
             android:background="@color/tb_color" />
 
         <LinearLayout
