--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -8,20 +8,19 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:background="@color/white">
 
         <ImageView
             android:id="@+id/back_btn"
             android:layout_width="35dp"
             android:layout_height="35dp"
             android:src="@drawable/ic_baseline_arrow_back_24"
-            android:background="@color/tb_color"
-            android:paddingStart="12sp"
+            android:paddingStart="12dp"
             android:paddingEnd="24dp"
             android:layout_centerVertical="true"
             android:layout_marginStart="20dp"
-            android:layout_marginTop="40dp"
-            />
+            android:layout_marginTop="40dp" />
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/profilePic"
@@ -43,7 +42,7 @@
             android:layout_toEndOf="@id/profilePic">
 
             <TextView
-                android:id="@+id/r_name"
+                android:id="@+id/name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text= "@string/name_txt"
