--- a/app/src/main/res/drawable/u1_msg_bg.xml
+++ b/app/src/main/res/drawable/u1_msg_bg.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="?attr/colorPrimary"/>
+    <solid android:color="@color/btn_color"/>
     <corners android:topLeftRadius="100dp"
         android:topRightRadius="100dp"
         android:bottomLeftRadius="100dp"/>
