--- a/app/src/main/res/drawable/u2_msg_bg.xml
+++ b/app/src/main/res/drawable/u2_msg_bg.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="?attr/colorSecondaryVariant"/>
+    <solid android:color="?attr/colorSecondary"/>
     <corners android:topLeftRadius="100dp"
         android:topRightRadius="100dp"
         android:bottomRightRadius="100dp"/>
